DT-2023 Fixed misalignment on Internet Explorer.

--- a/src/client/components/atoms/newsletter-small-primary-button/newsletter-small-primary-button.scss
+++ b/src/client/components/atoms/newsletter-small-primary-button/newsletter-small-primary-button.scss
@@ -12,3 +12,7 @@
 
 
 @include small-button(".NewsletterSmallPrimaryButton");
+
+.NewsletterSmallPrimaryButton{
+  height: 50px;
+}
