--- a/src/client/components/molecules/news-modal.scss
+++ b/src/client/components/molecules/news-modal.scss
@@ -102,6 +102,7 @@
   height: 0;
   width: 180px;
   background-color: #FFFFFF;
+  vertical-align: top;
 }
 
 .btnContainer{
